Snake collision with body now works fine